feat(core): test visible change in Header

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
   "requestingLocation": "Requesting location...",
   "restaurantsNearby": "Nearby Restaurants",
   "noRestaurants": "No restaurants found near",
-  "welcome": "Welcome to Tably",
+  "welcome": "Welcome to tabbbb",
   "subtitle": "Discover restaurants near you, filter by mood, and view menus instantly.",
   "mood_all": "All",
   "mood_pizza": "Pizza",
