--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -5,7 +5,7 @@
   "requestingLocation": "מבקש מיקום...",
   "restaurantsNearby": "מסעדות קרובות",
   "noRestaurants": "לא נמצאו מסעדות ליד",
-  "welcome": "aaaברוכים הבאים ל-Tably",
+  "welcome": "ברוכים הבאים ל-Tably",
   "subtitle": "גלו מסעדות סביבכם, סננו לפי מצב רוח, ותעברו לתפריט הדיגיטלי בלחיצה אחת.",
   "mood_all": "הכול",
   "mood_pizza": "פיצה",
