--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,7 @@
   "opt_sugar": "Sugar",
   "opt_pasta_type": "Pasta Type",
   "opt_bread": "Bread",
-  "menu": "Menu",
+  "menu": "MENU",
   "contact": "Contact",
   "all": "All",
   "search_placeholder": "Search dishes...",
@@ -19,7 +19,7 @@
   "whatsapp": "WhatsApp",
   "location": "Location",
   "address": "Address",
-  "open_hours": "Opening Hours",
+  "open_hours": "OPEN HOURS",
   "add_to_cart": "Add to Cart",
   "added": "Added",
   "customize": "Customize",
