revert: Restore original English translations
- Change 'OPEN HOURS' back to 'Opening Hours'
- Change 'MENU' back to 'Menu'
- Build library with original translations restored

Reverting test changes to maintain proper UI text formatting.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,7 @@
   "opt_sugar": "Sugar",
   "opt_pasta_type": "Pasta Type",
   "opt_bread": "Bread",
-  "menu": "MENU",
+  "menu": "Menu",
   "contact": "Contact",
   "all": "All",
   "search_placeholder": "Search dishes...",
@@ -19,7 +19,7 @@
   "whatsapp": "WhatsApp",
   "location": "Location",
   "address": "Address",
-  "open_hours": "OPEN HOURS",
+  "open_hours": "Opening Hours",
   "add_to_cart": "Add to Cart",
   "added": "Added",
   "customize": "Customize",
