feat: Update locale files and build workflow
- Update translations in en.json, ar.json, and he.json
- Modify build workflow configuration
- Include latest locale improvements and workflow enhancements

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -97,14 +97,13 @@
   "wa_confirm_order": "يرجى تأكيد هذا الطلب. شكراً لك! 🙏",
   "served_until_13": "يُقدم حتى 13:00",
   "day_sun": "الأحد",
-  "day_mon": "الاثنين",
+  "day_mon": "الاثنين", 
   "day_tue": "الثلاثاء",
   "day_wed": "الأربعاء",
   "day_thu": "الخميس",
   "day_fri": "الجمعة",
   "day_sat": "السبت",
-  "day_tue-sat": "الثلاثاء-السبت",
-  "day_mon-sat": "الاثنين-السبت",
+  "day_tue-sun": "الثلاثاء-الاحد",
   "terms_of_service": "شروط الخدمة",
   "privacy_policy": "سياسة الخصوصية",
   "accessibility_statement": "بيان إمكانية الوصول",
@@ -144,7 +143,6 @@
   "name_required": "اسم العميل مطلوب قبل الإرسال إلى واتساب",
   "back_to_menu": "العودة إلى القائمة",
   "closed": "مغلق",
-  "for_illustration_only": "للتوضيح فقط",
   "restaurant_closed_message": "المطعم مغلق حالياً. الرجاء المحاولة خلال ساعات العمل.",
   "close": "إغلاق",
   "closed_popup_message": "المطعم مغلق حالياً. يمكن تقديم الطلبات فقط خلال ساعات العمل.",
