--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -4,6 +4,7 @@
   "wa_name": "שם",
   "wa_type": "סוג",
   "wa_time": "שעה/שולחן",
+
   "opt_size": "גודל",
   "opt_extras": "תוספות",
   "opt_notes": "הערות",
@@ -97,15 +98,13 @@
   "wa_confirm_order": "אנא אשר את ההזמנה הזו. תודה! 🙏",
   "served_until_13": "מוגש עד 13:00",
   "day_sun": "ראשון",
-  "day_mon": "שני",
+  "day_mon": "שני", 
   "day_tue": "שלישי",
   "day_wed": "רביעי",
   "day_thu": "חמישי",
   "day_fri": "שישי",
   "day_sat": "שבת",
-  "day_tue-sat": "שלישי-שבת",
-  "day_mon-sat": "שני-שבת",
-  "for_illustration_only": "להמחשה בלבד",
+  "day_tue-sun": "שלישי-ראשון",
   "terms_of_service": "תנאי שימוש",
   "privacy_policy": "מדיניות פרטיות",
   "accessibility_statement": "הצהרת נגישות",
@@ -124,7 +123,7 @@
   "terms_changes_text": "26.9.2025",
   "privacy_info_collection": "אחריות",
   "privacy_info_collection_text": "אין אחריות לשירותי צד-שלישי (כגון WhatsApp). כל שימוש בשירותים חיצוניים כפוף לתנאורים.",
-  "privacy_info_usage": "שינויים בתנאים",
+  "privacy_info_usage": "שינויים בתנאים", 
   "privacy_info_usage_text": "יתכן שנעדכן שינויים בתנאי השימוש מעת לעת. המשך השימוש כהסכמה לתנאים כפופה.",
   "privacy_cookies": "מדיניות פרטיות",
   "privacy_cookies_text": "אנו מכבדים את פרטיותכם. האתר אינו מפעיל עוגיות (cookies) ואינו מבצע מעקב אינטרנטי. המידע שמורן בעלות הקרייות ומורה מקומית בדפדפן (LocalStorage) לצורך המשכיות כבב, ויכול לכלול שם ופוטר המנה (אישי/משפחה).",
