feat: Update locale translations
- Update translations in en.json, ar.json, and he.json
- Improve localization across all supported languages
- Enhance user experience with better translations

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -9,6 +9,7 @@
   "opt_notes": "ملاحظات",
   "opt_doneness": "درجة الاستواء",
   "opt_sugar": "سكر",
+  "day_mon-sat": "الاثنين-السبت",
   "opt_pasta_type": "نوع المعكرونة",
   "opt_bread": "الخبز",
   "menu": "القائمة",
