--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,7 @@
   "opt_notes": "Notes",
   "opt_doneness": "Doneness",
   "opt_sugar": "Sugar",
+  "day_mon-sat": "Monday-Saturday",
   "opt_pasta_type": "Pasta Type",
   "opt_bread": "Bread",
   "menu": "Menu",
