--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -9,6 +9,7 @@
   "opt_extras": "תוספות",
   "opt_notes": "הערות",
   "opt_doneness": "דרגת עשייה",
+  "day_mon-sat": "שני-שבת",
   "opt_sugar": "סוכר",
   "opt_pasta_type": "סוג פסטה",
   "opt_bread": "לחם",
